Changes for 1.8.20rc1

A......... [ZBX-7703] fixed being able to switch users without proper credentials when using HTTP authentication (Pavels)
.......PS. [ZBX-7686] fixed UTF-8 strings not being fetched fully from Oracle (asaveljevs)
..F....... [ZBX-7643] fixed graph copying (Eduard)
A......... [ZBX-3702] fixed drule.get selectDChecks parameter not returning any results; thanks to Sergey Sireskin (Pavels)
...G...PS. [ZBX-4243] fixed Zabbix syslog application names (RFC 5424 APP-NAME) (Andris)

Changes for 1.8.19

1.8.19rc1 was released as 1.8.19 without any changes

Changes for 1.8.19rc1

...G...... [ZBX-7479] fixed remote command execution from Zabbix server if flexible user parameters are configured; thanks to Recurity Labs Team for the report (Sasha)
....I..... [ZBXNEXT-1256] changed example directory size user parameter to return bytes (Richlv)
..F....... [ZBX-7156] fixed string value escaping in profiles (Eduard)
...G...... [ZBX-4658] fixed system.boottime and system.uptime returning bogus values on Solaris when agent is compiled as a 64-bit binary (asaveljevs)
........S. [ZBX-7119] fixed data collection stopping after no data maintenance until configuration cache is updated (asaveljevs)
..F....... [ZBX-7074] fixed incorrectly parsed trigger expression in trigger wizard (Vitalij)

Changes for 1.8.18

1.8.18rc1 was released as 1.8.18 without any changes

Changes for 1.8.18rc1

A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in page filtering; thanks to Bernhard Schildendorfer from SEC Consult for the report (Eduard, Pavels)
A.F....... [ZBX-7091] fixed SQL injection vulnerabilities in dashboard favourite managing; thanks to Lincoln, a member of Corelan Team, for the report (Eduard, Pavels)
.......P.. [ZBX-6249] fixed data loss in proxy "Data sender" process caused by unfinished transactions; thanks to MATSUDA Daiki for patch (Andris)
..F....... [ZBX-6830] fixed dynamic item checkbox in Configuration > Screens (Ivo)